feat: add admin cash payments
